issue: Remove attachments from right timeline

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7785,12 +7785,9 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         border-color: #BA68C8;
     }
 
-    .attach-exists {
-         color: darkgrey;
-    }
-
     .comment-exists {
         color: #8b008b;
+        margin-right: 5px;
     }
 
     &:hover {
