--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -43,7 +43,7 @@
         var shallWeOpenLeftNavigation = localStorage.getItem('shallWeOpenLeftNavigation');
 
         if (window.parent === window) {
-            if (shallWeOpenLeftNavigation === "true") {
+            if (shallWeOpenLeftNavigation === "true" && !@UserApp.currentUser().isAnonymous) {
                 window.location.href = "@routes.Application.sidebar?path=" + window.location.pathname;
             }
         }
@@ -104,9 +104,7 @@
                 });
             });
 
-            var shallWeOpenLeftNavigation = localStorage.getItem('shallWeOpenLeftNavigation');
-
-            if (window.parent === window && !shallWeOpenLeftNavigation) {
+            if (window.parent === window) {
                 $(".pin > .yobicon-arrow-right").show();
             } else {
                 $(".pin > .yobicon-arrow-left").show();
