issue: Show issue link url

--- a/app/assets/stylesheets/yobi.less
+++ b/app/assets/stylesheets/yobi.less
@@ -3,6 +3,7 @@
 @import "less/_common.less";
 @import "less/_sprites.less";
 @import "less/_page.less";
+@import "less/_tippy.less";
 @import "less/_scrollbar.less";
 @import "less/_responsive.less";
 @import "less/_yobiUI.less";
