--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -477,6 +477,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/elevator/jquery.elevator.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/videojs/video.min.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/favico/favico.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.issue.Assginee.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.issue.Sharer.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.detectChange.js")"></script>
