image: Enhance image gallery feature
- Support scroll for big hight image
- Support 'open image new window' on title click

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7823,3 +7823,17 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         color: white;
     }
 }
+
+.gallery-image-link {
+    color: #ffd500;
+    font-size: 1.1em;
+
+    &:hover {
+        color: #ffd500;
+    }
+
+    &:hover, &:visited {
+        color: #00ddff;
+    }
+
+}
