css: Refine subtle elements

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -136,25 +136,25 @@
     margin-right: 5px;
     padding: 0 1px;
     font-size: 18px;
-    color: white;
+    background-color: #03a9f4;
+    color: #3E2723;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
 
     i {
         &.yobicon-arrow-right, &.yobicon-arrow-left {
             padding: 4px 2px;
             display: none;
-            border: 1px solid white;
         }
 
         &:hover {
             cursor: pointer;
-            color: #03a9f4;
-            border: 1px solid #03a9f4;
+            color: white;
         }
     }
 
     &:hover {
         cursor: pointer;
-        color: #03a9f4;
     }
 }
 
