image: Change gallery js library
Change image gallery library magnific-popup to viewerjs

From: https://github.com/fengyuanchen/jquery-viewer

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -444,3 +444,11 @@ input:-webkit-autofill {
     max-height: 50vh;
     max-width: 100vh;
 }
+
+.viewer-toolbar {
+    ul {
+        li {
+            line-height: unset;
+        }
+    }
+}
