mention: Fix sub-comment mention bug in posting page

--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -233,7 +233,7 @@
 
             // yobi.Mention
             yobi.Mention({
-                "target": "textarea[id^=editor-]",
+                "target": 'textarea[id^=editor-], .editorSeries',
                 "url"   : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, post.getNumber, post.asResource().getType.resource()).toString())"
             });
 
