--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -52,6 +52,12 @@ code {
     margin-bottom: 12px;
   }
 
+  li p:not(:first-child) {
+    display: inline-block;
+    margin-top: 2px;
+    margin-bottom: 2px;
+  }
+
   a {
     color: #4183c4;
     text-decoration: none;
