markdown: Update markdown css styles

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -49,7 +49,7 @@ code {
 
   li > p {
     margin-top: 8px;
-    margin-bottom: 2px;
+    margin-bottom: 8px;
   }
 
   a {
@@ -83,6 +83,7 @@ code {
   h2,
   h3 {
     line-height: 40px;
+    margin-top: 24px;
     margin-bottom: 16px;
   }
 
@@ -133,7 +134,7 @@ code {
   }
 
   p {
-    margin: 0 0 12px 0;
+    margin: 0 0 16px 0;
     line-height: 1.6em;
   }
 
