--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -48,13 +48,7 @@ code {
   }
 
   li > p {
-    margin-top: 16px;
-    margin-bottom: 12px;
-  }
-
-  li p:not(:first-child) {
-    display: inline-block;
-    margin-top: 2px;
+    margin-top: 8px;
     margin-bottom: 2px;
   }
 
@@ -112,7 +106,7 @@ code {
 
   h3 {
     margin: 1em 0 5px;
-    font-size: 1.4em;
+    font-size: 1.25em;
     padding: 0;
     .anchor();
   }
@@ -139,7 +133,7 @@ code {
   }
 
   p {
-    margin: 0 0 16px 0;
+    margin: 0 0 12px 0;
     line-height: 1.6em;
   }
 
@@ -172,8 +166,12 @@ code {
     max-width: 80%;
   }
 
-  li > input[type='checkbox'] {
+  p > input[type='checkbox'] {
     vertical-align: text-top;
+  }
+
+  li > input[type='checkbox'] {
+    vertical-align: top;
   }
 
   img {
