--- a/app/views/project/webhooks.scala.html
+++ b/app/views/project/webhooks.scala.html
@@ -35,7 +35,7 @@
               <input type="radio" name="webhookType" value="DETAIL_HANGOUT_CHAT"> Google Chat (Thread)
             </label>
             <label class="radio inline">
-              <input type="radio" name="webhookType" value="JSON"> Continuous Integration tool (Only push event)
+              <input type="radio" name="webhookType" value="JSON"> Continuous Integration tool (JSON)
             </label>
             <label class="radio inline"> | </label><label class="radio inline"></label>
             <label class="checkbox inline" for="gitPush">
