issue: new feature - create an issue from comment

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6834,6 +6834,23 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   vertical-align: middle;
 }
 
+.new-issue-by {
+    vertical-align: middle;
+    font-size: 13px;
+
+    a {
+        text-decoration: none;
+        border: 1px solid transparent;
+        padding: 0 5px;
+        color: #000;
+
+        &:hover {
+            color: #51aacc;
+            cursor: pointer;
+        }
+    }
+}
+
 .watcher-count{
   opacity: 0.9 !important;
   border: 0 !important;
