issue: new feature - leave referenced issue to derived comment

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3052,6 +3052,9 @@ label.inline-list {
                         .no-text-decoration {
                             color: #0e90d2;
                         }
+                        a.issueLink {
+                            color: #0e90d2;
+                        }
                     }
                     .author {
                         text-align: right;
@@ -6842,10 +6845,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         text-decoration: none;
         border: 1px solid transparent;
         padding: 0 5px;
-        color: #000;
+        color: #51aacc;
 
         &:hover {
-            color: #51aacc;
+            color: #387a93;
             cursor: pointer;
         }
     }
