issue: new feature - show issue state of the issue link

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -60,6 +60,10 @@ code {
   a:hover {
     color: #4183c4;
     text-decoration: underline;
+
+    span {
+      text-decoration: none;
+    }
   }
 
   a:active {
