--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7853,3 +7853,23 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 
 }
+
+.issue-state {
+    border-radius: 3px;
+    padding: 0 3px;
+    margin-left: 3px;
+
+    &.open {
+        color: #fff;
+        background-color: #2ea043;
+    }
+
+    &.closed {
+        color: #fff;
+        background-color: #da3733;
+    }
+
+    &:hover {
+        text-decoration: none;
+    }
+}
