--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6840,6 +6840,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .new-issue-by {
     vertical-align: middle;
     font-size: 13px;
+    display: none;
+    float: left;
+    position: relative;
+    margin-top: 2px;
 
     a {
         text-decoration: none;
