issue: Apply user-select css in issue state span

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7862,6 +7862,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     border-radius: 3px;
     padding: 0 3px;
     margin-left: 3px;
+    user-select: none;
 
     &.open {
         color: #fff;
