editor: Update excel table paste to markdown table

--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -243,6 +243,11 @@
                     } else {
                         <button type="button" class="icon disabled btn-transparent-with-fontsize-lineheight ml6" data-toggle='popover' data-trigger="hover" data-placement="top" data-content="@Messages("issue.can.not.be.deleted")"><i class="yobicon-trash"></i></button>
                     }
+                        <div id="tooltip" role="tooltip">
+                            <div><a href="https://naver.com" target=_blank>이거</a></div>
+                            <div id="arrow" data-popper-arrow></div>
+                        </div>
+                        <button type="button" class="icon btn-transparent-with-fontsize-lineheight ml10 pt5px" onclick=""><i class=" yobicon-ellipsis-horizontal"></i></button>
                     </span>
                 </div>
                 <dl class="sharer-list @if(!hasSharer){hideFromDisplayOnly}">
