Support recent visit issue

--- a/app/views/sidebar.scala.html
+++ b/app/views/sidebar.scala.html
@@ -50,6 +50,11 @@
         @Messages("title.project")
         </a>
     </li>
+    <li class="myProjectList">
+        <a href="#myProjectList" data-toggle="tab">
+            @Messages("title.recently.visited.issue")
+        </a>
+    </li>
 </ul>
 <div class="tab-content tab-box">
     <div id="usermenu-tab-content-list" class="tab-content">
