editor: Remove temporary save text button

--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -36,6 +36,11 @@
             <div class="task-list-button"><button type="button" class="add-task-list-button ybtn ybtn-small ybtn-danger-no-outline"><i class="yobicon-list task-list-icon"></i> @Messages("button.add.checklist")</button></div>
         </li>
         <li>
+            <div class="editor-clear-temporary">
+                <div class="editor-clear-temporary-button"><button type="button" class="ybtn ybtn-small ybtn-warning">@Messages("button.clear.temporary")</button></div>
+            </div>
+        </li>
+        <li>
             <div class="editor-notice-label"></div>
         </li>
     </ul>
