--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7634,6 +7634,11 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 }
 
+.editor-clear-temporary {
+    margin-left: 10px;
+    display: none;
+}
+
 .tasklist {
     padding: 10px 20px 0 20px;
     box-shadow: none;
