--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7882,3 +7882,14 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         text-decoration: none;
     }
 }
+
+.refresh-button {
+    padding-left: 6px;
+    padding-top: 12px;
+}
+
+.yobicon-refresh {
+    &:hover {
+        color: #03a9f4;
+    }
+}
