usermenu: Add stick tab and reload button support

--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -66,6 +66,11 @@
                 @Messages("common.order.all")
                 </a>
             </li>
+            <li class="myRecentIssueList">
+                <a href="#myRecentIssueList" data-toggle="tab">
+                @Messages("title.recently.visited.issue")
+                </a>
+            </li>
         </ul>
         <div class="tab-content tab-box">
             <div id="usermenu-tab-content-list" class="tab-content">
