--- a/app/views/common/usermenu_tab_content_list.scala.html
+++ b/app/views/common/usermenu_tab_content_list.scala.html
@@ -15,4 +15,7 @@
 @views.html.index.allProjectList(UserApp.currentUser())
     </div>
 }
+<div class="tab-pane user-project-list" id="myRecentIssueList">
+@views.html.index.myRecentIssueList(UserApp.currentUser())
+</div>
 
