usermenu: Fix broken mobile ui layout

--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -97,6 +97,26 @@
   }
 }
 
+#sidebar #organizations{
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;   
+  top: 120px;
+  max-height: none;
+}
+
+#sidebar #recentlyVisited{
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;  
+  top: 168px;
+  max-height: none;
+}
+
 .user-project-list {
   ul.nav-subtab > li {
     border: none;
@@ -120,11 +140,11 @@
   }
 
   .user-ul {
-    margin: 0 0 10px 0;
     padding: 0;
     list-style-type: none;
     overflow-x: visible;
     overflow-y: auto;
+    margin: 0 0 10px 0;
     max-height: 80vh;
 
     &::-webkit-scrollbar {
