--- a/app/views/index/myRecentIssueList.scala.html
+++ b/app/views/index/myRecentIssueList.scala.html
@@ -26,7 +26,7 @@
                         <span class="bar"></span>
                     </div>
                     <div class="tab-content">
-                        @displayRecentIssues("recentlyVisited", currentUser.getVisitedIssues, true)
+                        @displayRecentIssues("recentlyVisitedIssues", currentUser.getVisitedIssues, true)
                     </div>
                 </div>
             </div>
