--- a/app/views/layout_framed.scala.html
+++ b/app/views/layout_framed.scala.html
@@ -62,6 +62,15 @@
         @if(!currentUser.isAnonymous){
             @sidebar()
         }
+    <div id="sidebar-bottom" class="sidebar-bottom hide" style="
+        position: absolute;
+        bottom: 8px;
+        right: 15px;
+        color: gray;
+    ">Yona, made by <i class="yobicon-hearts" style="
+        color: red;
+        vertical-align: middle;
+    "></i></div>
     </div>
     <div id="mainFrame">
         <iframe name="mainFrame" frameborder="0" class="mainFrame" height="100%" width="100%" src="@iframePath" ></iframe>
