comment: Show share link

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6837,6 +6837,20 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   vertical-align: middle;
 }
 
+.share-link {
+    color: #51aacc;
+    a {
+        text-decoration: none;
+        border: 1px solid transparent;
+        padding: 0 5px;
+
+        &:hover {
+            color: #387a93;
+            cursor: pointer;
+        }
+    }
+}
+
 .new-issue-by {
     vertical-align: middle;
     font-size: 13px;
