sidebar: Fix showing problem in mobile view

--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -241,6 +241,10 @@
         display: none !important;
     }
 
+    .show-in-mobile-100vh {
+        height: 100vh;
+    }
+
     .watch-btn {
         display: none;
     }
