--- a/app/views/layout_framed.scala.html
+++ b/app/views/layout_framed.scala.html
@@ -72,7 +72,7 @@
         vertical-align: middle;
     "></i></div>
     </div>
-    <div id="mainFrame">
+    <div id="mainFrame" class="show-in-mobile-100vh">
         <iframe name="mainFrame" frameborder="0" class="mainFrame" height="100%" width="100%" src="@iframePath" ></iframe>
         @common.scripts()
     </div>
