--- a/app/views/layout_framed.scala.html
+++ b/app/views/layout_framed.scala.html
@@ -73,7 +73,7 @@
     "></i></div>
     </div>
     <div id="mainFrame" class="show-in-mobile-100vh">
-        <iframe name="mainFrame" frameborder="0" class="mainFrame" height="100%" width="100%" src="@iframePath" ></iframe>
+        <iframe name="mainFrame" id="mainFrameId" frameborder="0" class="mainFrame" height="100%" width="100%" src="@iframePath" ></iframe>
         @common.scripts()
     </div>
 
