recent-issue: Add bullet dot

--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -576,10 +576,17 @@
 
   .issue-item {
     display: block !important;
-    padding-left: 10px !important;
+    padding-left: 5px !important;
+  }
+
+  .issue-title-start{
+    display: inline-block;
+    vertical-align: top;
+    width: 7px;
   }
 
   .issue-title {
+    display: inline-block;
     font-size: 13px;
     white-space: break-spaces;
     word-break: break-all;
@@ -677,7 +684,7 @@
   }
 
   .project-list {
-    padding: 5px 0;
+    padding: 4px 0;
 
     &:hover {
       cursor: pointer;
