--- a/app/views/index/myRecentIssueList_partial.scala.html
+++ b/app/views/index/myRecentIssueList_partial.scala.html
@@ -8,12 +8,13 @@
 @import java.net.URLDecoder
 @(issue:RecentIssue, favored:Boolean, isLast:Boolean = false)
 @import utils.TemplateHelper._
+@pathName = @{URLDecoder.decode(issue.getNumber, "UTF-8")}
 
 <li class="user-li @if(isLast){favored}" data-location="@issue.url">
     <div class="project-list project-flex-container" data-toggle='popover' data-trigger="hover" data-placement="right" data-content="@URLDecoder.decode(issue.getNumber, "UTF-8")">
         <div class="project-item project-item-container">
             <div class="issue-item projectName-owner flex-item">
-                <div class="issue-title flex-item">@issue.title</div>
+                <div class="issue-title-start">·</div><div class="issue-title flex-item">@issue.title</div>
             </div>
         </div>
     </div>
