--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -185,7 +185,7 @@
 
         // when to click a link in the iframe page, match browser URL
         if (window.parent !== window) {
-            $("a.ago, .head-anchor").on("click", function () {
+            $("a.ago, .head-anchor, .share-link").on("click", function () {
                 var $this = $(this);
                 if (!history.state) {
                     window.parent.history.pushState({ startPath: location.pathname }, $this.text(), $this.attr("href"));
