--- a/app/views/issue/partial_index_comment.scala.html
+++ b/app/views/issue/partial_index_comment.scala.html
@@ -57,6 +57,7 @@
             </span>
             <span class="ago-date">
                 <a href="#comment-@comment.id" class="ago" title="@JodaDateUtil.getDateString(comment.createdDate)">@utils.TemplateHelper.agoOrDateString(comment.createdDate)</a>
+                <a href="#comment-@comment.id" class="share-link" style="display: none">[Link]</a>
             </span>
         </div>
     </div>
