--- a/app/views/index/myRecentIssueList_partial.scala.html
+++ b/app/views/index/myRecentIssueList_partial.scala.html
@@ -14,7 +14,7 @@
     <div class="project-list project-flex-container" data-toggle='popover' data-trigger="hover" data-placement="right" data-content="@URLDecoder.decode(issue.getNumber, "UTF-8")">
         <div class="project-item project-item-container">
             <div class="issue-item projectName-owner flex-item">
-                <div class="issue-title-start">·</div><div class="issue-title flex-item">@issue.title</div>
+                <div class="issue-title-start">-</div><div class="issue-title flex-item">@issue.title</div>
             </div>
         </div>
     </div>
